CHANGE: Cloudinary Uploader Complete

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "countries API",
+  "name": "countries_API",
   "version": "1.0.0",
   "description": "A Node.JS API For providing developers with world data based around countries",
   "main": "index.js",
@@ -9,6 +9,13 @@
   "private": false,
   "devDependencies": {
     "eslint": "^6.7.1",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
+  },
+  "dependencies": {
+    "cloudinary": "^1.17.0"
   }
 }
